--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
             height: 653px;
         }
         </style>
-        <title></title>
+        <title>Witch Hunts in Early Modern Europe and Beyond</title>
     </head>
     <body>
+        <p> This map shows some of the sites of historic witch hunts and witch trials, it is by no means complete! As you can see the last person to be tried under the witchcraft act in the UK was in Portsmouth in 1944! </p>
         <div id="map">
         </div>
         <script src="js/qgis2web_expressions.js"></script>
