--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
     <head>
+        <title>Witch Hunts in Early Modern Europe and Beyond
+        </title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
@@ -16,7 +18,7 @@
             height: 653px;
         }
         </style>
-        <title>Witch Hunts in Early Modern Europe and Beyond</title>
+        
     </head>
     <body>
         <p> This map shows some of the sites of historic witch hunts and witch trials, it is by no means complete! As you can see the last person to be tried under the witchcraft act in the UK was in Portsmouth in 1944! </p>
